--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,25 +20,55 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-          <li class="nav-item">
+
+          <% if (title == "Home") { %>
+            <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/home">Home</a>
-          </li>
+            <% } else {%>
+              <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/home">Home</a>
+            <% } %>
+            </li>
+          
+            <% if (title == "About Me") { %>
+              <li class="nav-item">
+                <a class="nav-link active " aria-current="page" href="/about">About Me</a>
+              <% } else {%>
+                <li class="nav-item">
+                  <a class="nav-link " aria-current="page" href="/about">About Me</a>
+              <% } %>
+              </li>
+            
+         
+              <% if (title == "Projects") { %>
+                <li class="nav-item">
+                  <a class="nav-link active " aria-current="page" href="/projects">Projects</a>
+                <% } else {%>
+                  <li class="nav-item">
+                    <a class="nav-link " aria-current="page" href="/projects">Projects</a>
+                <% } %>
+                </li>
 
-          <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="/about">About Me</a>
-          </li>
+                <% if (title == "Services") { %>
+                  <li class="nav-item">
+                    <a class="nav-link active " aria-current="page" href="/services">Services</a>
+                  <% } else {%>
+                    <li class="nav-item">
+                      <a class="nav-link " aria-current="page" href="/services">Services</a>
+                  <% } %>
+                  </li>
+          
+                
 
-          <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="/projects">Projects</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="/services">Services</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="/contact">Contact Me</a>
-          </li>
+                <% if (title == "Contact Me") { %>
+                  <li class="nav-item">
+                    <a class="nav-link active " aria-current="page" href="/contact">Contact Me</a>
+                  <% } else {%>
+                    <li class="nav-item">
+                      <a class="nav-link " aria-current="page" href="/contact">Contact Me</a>
+                  <% } %>
+                  </li>
+          
           
       </div>
     </div>
