--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,90 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= title %></title>
+<%- include partials/header.ejs %>
 
- <link rel='stylesheet' href='/content/app.css' />
- <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
- <link rel="stylesheet" href="/@fortawesome/fontawesome-free/css/all.min.css">
-</head>
-<body>
-  <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/">Matthew Mikhaiel</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+<%- include partials/main_nav.ejs %>
 
+<!--Main content-->
+  <div class="p-3 mb-2 bg-light text-dark">
+    <h1><%= title %></h1>
+    <p>Welcome to <%= title %></p>
+    <p>hello world</p>
 
-          <% if (title == "Home") { %>
-            <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/home">Home</a>
-            <% } else {%>
-              <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/home">Home</a>
-            <% } %>
-            </li>
-          
-            <% if (title == "About Me") { %>
-              <li class="nav-item">
-                <a class="nav-link active " aria-current="page" href="/about">About Me</a>
-              <% } else {%>
-                <li class="nav-item">
-                  <a class="nav-link " aria-current="page" href="/about">About Me</a>
-              <% } %>
-              </li>
-            
-         
-              <% if (title == "Projects") { %>
-                <li class="nav-item">
-                  <a class="nav-link active " aria-current="page" href="/projects">Projects</a>
-                <% } else {%>
-                  <li class="nav-item">
-                    <a class="nav-link " aria-current="page" href="/projects">Projects</a>
-                <% } %>
-                </li>
+<%- include partials/bottom_nav.ejs %>
 
-                <% if (title == "Services") { %>
-                  <li class="nav-item">
-                    <a class="nav-link active " aria-current="page" href="/services">Services</a>
-                  <% } else {%>
-                    <li class="nav-item">
-                      <a class="nav-link " aria-current="page" href="/services">Services</a>
-                  <% } %>
-                  </li>
-          
-                
-
-                <% if (title == "Contact Me") { %>
-                  <li class="nav-item">
-                    <a class="nav-link active " aria-current="page" href="/contact">Contact Me</a>
-                  <% } else {%>
-                    <li class="nav-item">
-                      <a class="nav-link " aria-current="page" href="/contact">Contact Me</a>
-                  <% } %>
-                  </li>
-          
-          
-      </div>
-    </div>
-  </nav>
-
-
-  <h1><%= title %></h1>
-  <p>Welcome to <%= title %></p>
-  <p>hello world</p>
-
-
-  <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="/jquery/dist.jquery.min.js"></script>
-  <script src="/Scripts/app.js"></script>
-</body>
-</html>
+  <%- include partials/footer.ejs%>
 
 
 
