--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,14 +3,16 @@
 <%- include partials/main_nav.ejs %>
 
 <!--Main content-->
+<Main class="container">
   <div class="p-3 mb-2 bg-light text-dark">
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
     <p>hello world</p>
-
+</div>
+</Main>
 <%- include partials/bottom_nav.ejs %>
 
-  <%- include partials/footer.ejs%>
+<%- include partials/footer.ejs%>
 
 
 
