--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -11,10 +11,10 @@
 
           <% if (title == "Home") { %>
             <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/home">Home</a>
+            <a class="nav-link active" aria-current="page" href="/home"><i class="fa-solid fa-house-blank"></i> Home</a>
             <% } else {%>
               <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/home">Home</a>
+              <a class="nav-link" aria-current="page" href="/home"><i class="fa-solid fa-house-blank"></i> Home</a>
             <% } %>
             </li>
           
