added second view

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,4 +1,3 @@
-<!--Index.ejs - Matthew Mikhaiel - 301229715 - 2022-06-03-->
 <%- include partials/header.ejs %>
 
 <%- include partials/main_nav.ejs %>
@@ -8,20 +7,9 @@
   <div class="p-3 mb-2 bg-light text-dark">
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
-    <p>hello world</p>
+    <p>This is the about page</p>
 </div>
 </Main>
 <%- include partials/bottom_nav.ejs %>
 
 <%- include partials/footer.ejs%>
-
-
-
-
-
-
-
-
-
-
-
