--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-
+<!--footer.ejs - Matthew Mikhaiel - 301229715 - 2022-06-03-->
   <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/jquery/dist.jquery.min.js"></script>
   <script src="/Scripts/app.js"></script>
