--- a/views/partials/bottom_nav.ejs
+++ b/views/partials/bottom_nav.ejs
@@ -1,4 +1,4 @@
-  
+  <!--bottom_nav.ejs - Matthew Mikhaiel - 301229715 - 2022-06-03-->
   <!--Footer-->
   <nav class="navbar fixed-bottom navbar-dark bg-dark">
     <div class="container-fluid">
