--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -1,7 +1,7 @@
   <!--Nav-->
   <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">Matthew Mikhaiel</a>
+      <a class="navbar-brand" href="/"> <img src="../Assets/images/Letter-M.png" alt="" width="30" height="24" class="d-inline-block align-text-top"> Matthew Mikhaiel</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
