--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,16 +6,18 @@
 <!--Main content-->
 <Main class="container">
   <div class="p-3 mb-2 bg-light text-dark">
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <p>hello world</p>
+    <h1>Welcome to my first NodeJs site!</h1>
+    <br>
+    <h4>Hello</h4>
+<p>My name is Matthew and I currently and am enrolled in Centennial college's Software engineering program. <br>
+I am eager to learn and work in this field as I am interested in computer technology.  My interests in <br>
+computers is making my path of a career change a whole lot easier.</p>
+  
 </div>
 </Main>
 <%- include partials/bottom_nav.ejs %>
 
 <%- include partials/footer.ejs%>
-
-
 
 
 
