--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -1,1 +1,13 @@
 /*custom css goes here*/
+main{
+    padding-top: 15px;
+}
+h2{
+  
+}
+.propic{
+    width:150px;
+}
+.card-img-top{
+    width: 75px;
+}
