Finished all pages

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -5,6 +5,7 @@
 
 <!--Main content-->
 <Main class="container">
+<h1>My past projects</H1>
 <div class="card-group">
 
   <div class="card text-bg-dark mb-3" style="width: 18rem;">
