--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,14 +1,38 @@
+<!--contact.ejs - Matthew Mikhaiel - 301229715 - 2022-06-03-->
 <%- include partials/header.ejs %>
 
 <%- include partials/main_nav.ejs %>
 
 <!--Main content-->
 <Main class="container">
-  <div class="p-3 mb-2 bg-light text-dark">
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <p>This is the contact page</p>
+
+<h1>Contact Me </h1>
+<br>
+
+<form class="row g-3">
+<div class="mb-3">
+  <label for="exampleFormControlInput1" class="form-label">Email address</label>
+  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+  <br>
+  <label for="exampleFormControlInput1" class="form-label">Phone Number</label>
+  <input type="phonenumber" class="form-control" id="exampleFormControlInput1" placeholder="416-555-5555">
 </div>
+<div class="mb-3">
+  <label for="exampleFormControlTextarea1" class="form-label">Leave Message</label>
+  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+</div>
+  <div class="col-12">
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
+      <label class="form-check-label" for="invalidCheck2">
+        Finished
+      </label>
+    </div>
+  </div>
+  <div class="col-12">
+    <button class="btn btn-primary" type="submit">Submit form</button>
+  </div>
+</form>
 </Main>
 <%- include partials/bottom_nav.ejs %>
 
