--- a/views/services.ejs
+++ b/views/services.ejs
@@ -1,13 +1,28 @@
+<!--services.ejs - Matthew Mikhaiel - 301229715 - 2022-06-03-->
 <%- include partials/header.ejs %>
 
 <%- include partials/main_nav.ejs %>
 
 <!--Main content-->
 <Main class="container">
-  <div class="p-3 mb-2 bg-light text-dark">
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <p>This is the services page</p>
+<h1>Services I offer</h1>
+<div class="row">
+  <div class="col-4">
+    <div class="list-group" id="list-tab" role="tablist">
+      <a class="list-group-item list-group-item-action active" id="list-home-list" data-bs-toggle="list" href="#list-home" role="tab" aria-controls="list-home">Web Design</a>
+      <a class="list-group-item list-group-item-action" id="list-profile-list" data-bs-toggle="list" href="#list-profile" role="tab" aria-controls="list-profile">Object-Oriented Programming</a>
+      <a class="list-group-item list-group-item-action" id="list-messages-list" data-bs-toggle="list" href="#list-messages" role="tab" aria-controls="list-messages">SQL Database</a>
+      <a class="list-group-item list-group-item-action" id="list-settings-list" data-bs-toggle="list" href="#list-settings" role="tab" aria-controls="list-settings">Interior Design</a>
+    </div>
+  </div>
+  <div class="col-8">
+    <div class="tab-content" id="nav-tabContent">
+      <div class="tab-pane fade show active" id="list-home" role="tabpanel" aria-labelledby="list-home-list"><img class="servicepic" src="../assets/images/wd.jpg" alt=""><br> I have knowledge in HTML and CSS as well as just learned how to use nodejs. </div>
+      <div class="tab-pane fade" id="list-profile" role="tabpanel" aria-labelledby="list-profile-list"><img class="servicepic" src="../assets/images/program.jpg" alt=""><br> I can build you a calculator pretty easily... or can do more!</div>
+      <div class="tab-pane fade" id="list-messages" role="tabpanel" aria-labelledby="list-messages-list"><img class="servicepic" src="../assets/images/sql.jpg" alt=""><br> I offer Database services with SQL, MongoDB coming soon.</div>
+      <div class="tab-pane fade" id="list-settings" role="tabpanel" aria-labelledby="list-settings-list"><img class="servicepic" src="../assets/images/id.jpg" alt=""><br> I still am a trained Interior Designer, and own a Drapery and Blinds Store in Brampton. <a href=" www.draperyfabricdesign.ca"> www.draperyfabricdesign.ca</a> </div>
+    </div>
+  </div>
 </div>
 </Main>
 <%- include partials/bottom_nav.ejs %>
