--- a/Server/views/auth/login.ejs
+++ b/Server/views/auth/login.ejs
@@ -1,7 +1,7 @@
 <!--about.ejs - Matthew Mikhaiel - 301229715 - 2022-06-03-->
-<%- include partials/header.ejs %>
+<%- include ../partials/header.ejs %>
 
-<%- include partials/main_nav.ejs %>
+<%- include ../partials/main_nav.ejs %>
 
 <!--Main content-->
 
@@ -39,6 +39,6 @@
     </div>
 
 </main>
-<%- include partials/bottom_nav.ejs %>
+<%- include ../partials/bottom_nav.ejs %>
 
-<%- include partials/footer.ejs%>
+<%- include ../partials/footer.ejs%>
