cant figure out how to show db

--- a/Server/views/contact/edit.ejs
+++ b/Server/views/contact/edit.ejs
@@ -1,7 +1,7 @@
 <!--Index.ejs - Matthew Mikhaiel - 301229715 - 2022-06-03-->
-<%- include partials/header.ejs %>
+<%- ../include partials/header.ejs %>
 
-<%- include partials/main_nav.ejs %>
+<%- ../include partials/main_nav.ejs %>
 
 <!-- Content for the Add page -->
 <div class="container">
@@ -73,6 +73,6 @@
     </div>
 </div>
 
-<%- include partials/bottom_nav.ejs %>
+<%- include ../partials/bottom_nav.ejs %>
 
-<%- include partials/footer.ejs%>
+<%- include ../partials/footer.ejs%>
