--- a/Server/views/contact/add.ejs
+++ b/Server/views/contact/add.ejs
@@ -1,7 +1,7 @@
 <!--Index.ejs - Matthew Mikhaiel - 301229715 - 2022-06-03-->
-<%- include partials/header.ejs %>
+<%- include ../partials/header.ejs %>
 
-<%- include partials/main_nav.ejs %>
+<%- include ../partials/main_nav.ejs %>
 
 <!-- Content for the Add page -->
 <div class="container">
@@ -40,7 +40,7 @@
                 <button class="btn btn-primary" type="submit">
                     <i class="fas fa-edit"></i> Submit</button>
                 
-                    <a href="/book-list" class="btn btn-warning">
+                    <a href="/contact-list" class="btn btn-warning">
                         <i class="fas fa-undo"></i> Cancel</a>
 
             </form>
@@ -49,6 +49,6 @@
     </div>
 </div>
 
-<%- include partials/bottom_nav.ejs %>
+<%- include ../partials/bottom_nav.ejs %>
 
-<%- include partials/footer.ejs%>
+<%- include ../partials/footer.ejs%>
