--- a/Server/views/contact/bContactList.ejs
+++ b/Server/views/contact/bContactList.ejs
@@ -1,7 +1,7 @@
 <!--Index.ejs - Matthew Mikhaiel - 301229715 - 2022-06-03-->
-<%- include partials/header.ejs %>
+<%- include ../partials/header.ejs %>
 
-<%- include partials/main_nav.ejs %>
+<%- include ../partials/main_nav.ejs %>
 
 <!--Main content-->
  <!-- Main Content -->
@@ -35,18 +35,18 @@
 
                 <!-- Repeatable Template Row -->
 
-                <% for(let count = 0; count < contactList.length; count++) { %>
+                <% for(let count = 0; count < ContactList.length; count++) { %>
                     <tr class="d-flex">
                         <% if(typeof displayName == 'string' && displayName) { %>
                             <td class="text-center col-2"><%= contactList[count].name %></td>
                             <td class="text-center col-2"><%= contactList[count].number %></td>
                             <td class="text-center col-1"><%= contactList[count].email %></td>                 
                             <td class="text-center col-1">
-                                <a href="/book-list/edit/<%= BookList[count]._id %>" class="btn btn-primary btn-sm">
+                                <a href="/contact-list/edit/<%= ContactList[count]._id %>" class="btn btn-primary btn-sm">
                                 <i class="fas fa-pencil-alt"></i> Edit</a>
                             </td>
                             <td class="text-center col-1">
-                                <a href="/book-list/delete/<%= BookList[count]._id %>" class="btn btn-danger btn-sm">
+                                <a href="/contact-list/edit/<%= ContactList[count]._id %>" class="btn btn-primary btn-sm">
                                 <i class="fas fa-trash-alt"></i> Delete</a>
                             </td>
                          <% } else { %>
@@ -60,7 +60,7 @@
         </div>
     </div>
   </main>
-<%- include partials/bottom_nav.ejs %>
+<%- include ../partials/bottom_nav.ejs %>
 
-<%- include partials/footer.ejs%>
+<%- include ../partials/footer.ejs%>
 
