cant figure out error

--- a/Server/views/contact/add.ejs
+++ b/Server/views/contact/add.ejs
@@ -14,7 +14,7 @@
                     <label for="nameTextField">Enter Username</label>
                     <input type="text" class="form-control"
                     id="nameTextField"
-                    placeholder="Enter the Book Title"
+                    placeholder="Enter Username"
                     name="name" required>
                 </div>
 
